# proyecto-semilla

./: .coverage 10  .coverage 2  .coverage 3  .coverage 4  .coverage 5  .coverage 6  .coverage 7  .coverage 8  .coverage 9  .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARQUITECTURA.md  AUDITORIA_COMPLETA_MVP_FINAL.md  AUDITORIA_COMPLETA_POST_HARDCODED_USERS.md  CHANGELOG.md  CLI_USAGE.md  CMS_ELIMINATION_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  DESIGN_SYSTEM_GUIDE.md  DEVELOPMENT_STANDARDS.md  Dockerfile  ESTABILIZACION_V0.9.0.md  ESTADO_ACTUAL_SESION.md  GEMINI.md  HARDCODED_USERS_ELIMINATION_IMPACT_ANALYSIS.md  INITIAL_SETUP_FLOW_DOCUMENTATION.md  INSTALL.md  INSTRUCCIONES_DESARROLLADOR.md  LICENSE  MCP_MEMORY_CONFIG.md  MEMORY_INTEGRATION_PROPOSAL.md  MENSAJE_PARA_KILO_CODE.md  MIGRATION_STRATEGY_HARDCODED_USERS.md  Makefile  (+42 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
AUDITORIA_NUCLEO/: architecture_analysis.json  architecture_report.md  architecture_summary.txt
backend/: README.md  alembic.ini  requirements.txt  run_mcp_server.py
compose/: deploy.sh  docker-compose.blue.yml  docker-compose.green.yml  docker-compose.prod.yml  docker-compose.yml
demo/: autodocs_demo.py  core_vibecoding_demo.py
deploy/: README.md
discovery_demo_results/: architecture_analysis.json  architecture_report.md  architecture_summary.txt
docker/: README.md
docs/: AUDITORIA_FINAL_COMPLETA.md  AUDITORIA_FINAL_MVP_VS_OBJETIVOS.md  AUDITORIA_MVP_COMPLETA.md  AUDITORIA_PRODUCCION_COMPLETA.md  CHECKPOINT_GEMINI_TRANSITION.md  CURRENT_STATUS.md  DEPLOYMENT_SUMMARY.md  ESTADO_ACTUAL_Y_ROADMAP.md  FRONTEND_CONNECTIVITY_ISSUE_RESOLUTION.md  IMPLEMENTACION_INCREMENTAL_PASO_A_PASO.md  MCP_INTEGRATION.md  MEJORAS_P1_IMPLEMENTADAS.md  MIGRATION_HARDCODED_USERS.md  MVP_0.7.x_FINAL_DOCUMENTATION.md  MVP_0.7.x_FINAL_DOCUMENTATION_EN.md  PLAN_EMERGENCIA_FRONTEND.md  PLAN_IMPLEMENTACION_FRONTEND_BEST_PRACTICES.md  PRODUCTION_DEPLOYMENT.md  PROGRESO_IMPLEMENTACION_FRONTEND.md  README.md  README_FINAL_MVP.md  SECURITY_CORRECTIONS_APPLIED.md  (+15 more)
(+805 files in other folders)
