[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acme_saas"
version = "0.9.1"
description = "Seed SaaS boilerplate for Django 5+"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Acme Inc." }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-django>=4.8",
  "pytest-cov>=5.0",
  "factory-boy>=3.3",
  "freezegun>=1.5",
  "pre-commit>=3.7",
  "ruff>=0.8",
  "black>=24.8",
  "isort>=5.13",
  "bandit>=1.7",
  "djlint>=1.35",
  "pip-audit>=2.7",
  "safety>=3.2",
  "mypy>=1.12",
  "django-stubs>=5.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
  "config",
  "common",
  "core",
  "billing",
  "multitenant",
  "oauth",
  "cms",
  "lms",
  "community",
  "api",
  "mcp",
]
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "DJ", "S", "RUF"]
ignore = ["S101", "DJ001"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "S"]
"**/tests/*.py" = ["S"]

[tool.bandit]
exclude_dirs = ["tests", "src/**/migrations"]
skips = ["B101"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
django_settings_module = "config.settings.dev"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
pythonpath = ["src"]
addopts = "-ra --strict-markers --disable-warnings --cov=src --cov-report=term-missing"
testpaths = ["src", "tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90

[tool.djlint]
profile = "django"
blank_line_after_tag = "load,extends,include"
max_line_length = 100
ignore = "H006,H030,H031"
